# Qt_calculator

./: .gitignore  CMakeLists.txt  Main.qml  README.md  button.qml  calculator.cpp  calculator.h  main.cpp
include/: buttonmodel.h  calculator.h
src/: CalculatorButton.qml  buttonmodel.cpp  calculator.cpp  main.cpp
